--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "firebase": "^12.4.0",
     "framer-motion": "^11.3.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
